[package]
name = "plot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive", "std"], default-features = false }

rust_decimal = { version = "1.35", features = ["serde-with-str"], default-features = false }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"]}